# contractguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
examples/: basic_usage.py
src/contractguard/: __init__.py  cli.py  profile.py  pytest_plugin.py  report.py
tests/: test_contractguard.py  test_features.py
